syntax = "proto3";

package pactissue;

message GetUserResponse {
  string id = 1;
  string display_name = 2;
  string first_name = 3;
  string surname = 4;
  string created_at = 5;
  string updated_at = 6;
  string last_name = 7;
  string email = 8;
  bool email_verified = 9;
}

message GetUserRequest {
  string id = 1;
}

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
}
